# polyglot

./: .gitignore  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme.adoc  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
leibniz/c/: leibniz.c
leibniz/ecmascript/: leibniz.es
leibniz/julia/: leibniz.jl
leibniz/lua/: leibniz.lua
leibniz/nim/: leibniz.nim
leibniz/ocaml/: leibniz.ml
leibniz/perl/: leibniz.pl
leibniz/php/: leibniz.php
leibniz/powershell/: leibniz.ps1
leibniz/r/: leibniz.r
leibniz/ruby/: leibniz.rb
leibniz/zig/: leibniz.zig
old/: readme.adoc
old-0.1/dictionary/: Main.java
public/font/: LICENSE
src/: AdHocPolymorphism.vue  App.tsx  App.vue  CodeBlock.module.css  CodeBlock.tsx  CodeBlock.vue  Comments.vue  CompositeTypes.vue  EnumeratedTypes.vue  Greetings.vue  Hello.tsx  Interfaces.vue  ParametricPolymorphism.vue  Section.ts  Traits.vue  index.css  main.tsx
src/ad_hoc_polymorphism/: main.cpp  main.go  main.jl  main.nim  main.rs
src/comments/: main.cpp  main.go  main.hs  main.jl  main.nim  main.rs
src/composite_types/: Main.java  main.cpp  main.go  main.hs  main.jl  main.js  main.nim  main.py  main.rs
src/enumerated_types/: main.cpp  main.go  main.hs  main.jl  main.py  (+1 more)
src/program/python/fizzbuzz/: .gitignore  fizzbuzz.py  pyproject.toml
src/program/python/fizzbuzz/src/fizzbuzz/: __init__.py
src/program/python/hello/: pyproject.toml
src/program/python/leibniz/: pyproject.toml
src/program/python/leibniz/src/leibniz/: __init__.py
(+230 files in other folders)
