[project]
name = "hello"
version = "0.1.0"
description = "A hello program for Python."
readme = "readme.md"
authors = [
    { name = "Koki Fushimi" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
